Projects/kubernetes/ingress/ing-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <your-service-name>
            port:
              number: <your-service-port>
